--- a/src/style/Layout.css
+++ b/src/style/Layout.css
@@ -1,4 +1,5 @@
- 
+
+  
   .layout {
     display: flex;
     flex-grow: 1;
@@ -7,6 +8,7 @@
 
 /* Reset và font */
 * {
+  
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -15,6 +17,7 @@
   
   /* Toàn bộ trang */
   .body {
+    margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -23,19 +26,25 @@
   }
   
   /* Phần content chính bên phải dashboard */
-  .main-content {
-    flex-grow: 1;
+  .container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: rgba(65, 44, 58, 1);
+  }
+  
+  .content {
+    flex: 1;
     padding: 30px;
     color: white;
     min-height: 100vh;
-    margin-left: 250px; /* để tránh bị dashboard che */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
   
   /* Responsive cho mobile */
-  @media screen and (max-width: 430px) {
+  /* @media screen and (max-width: 430px) {
     .body {
       background: linear-gradient(90deg, rgba(14, 25, 32, 1), rgba(65, 44, 58, 1) 100%);
       justify-content: center;
@@ -47,10 +56,9 @@
       margin-left: 0;
       padding: 20px 10px;
     }
-  }
+  } */
   
   .body-content{
-    padding: 30px;
     color: white;
     min-height: 100vh;
     display: flex;
@@ -116,19 +124,12 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  width: 100%;
-  min-height: auto; /* hoặc theo chiều cao bạn mong muốn */
+  /* width: 100%; */
+  /* min-height: auto; hoặc theo chiều cao bạn mong muốn */
   margin-top: auto;
   position: relative;
   z-index: 1;
 }
-
-
-/* .table_content th,
-.table_content td {
-  padding: 8px 12px;
-  text-align: left;
-} */
 
 .link img {
   width: 24px;
@@ -212,15 +213,6 @@
   opacity: 0.85;
 }
 
-/* === ICON ===
-.Menu-part div i,
-.Library-part div i,
-.Play-list-part div i,
-.General-part div i {
-  width: 18.75px;
-  height: 18.75px;
-  font-size: 18px;
-} */
 
 /* === LINK TEXT === */
 .Menu-part {
@@ -245,7 +237,7 @@
 }
 
 .footer-content {
-  margin-top: 17%;
+  margin-top: 1%;
   padding: 40px 40px;
   width: 100%;
   color: white;
@@ -258,7 +250,7 @@
   padding-top: 20%;
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
-  gap: 50px;
+  gap: 40px;
   align-items: start;
 }
 
@@ -308,6 +300,7 @@
 .footer-links {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
 }
 
 .line {
