--- a/src/components/common/D2Card.css
+++ b/src/components/common/D2Card.css
@@ -1,7 +1,6 @@
+@import "tailwindcss";
+
 .d2card {
-  width: 220px;
-  border-radius: 10px;
-  overflow: hidden;
   cursor: pointer;
   flex: 0 0 auto;
 }
@@ -10,6 +9,8 @@
   position: relative;
   width: 100%;
   height: 140px;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .d2card-thumb img {
@@ -29,13 +30,15 @@
 }
 
 .d2card-title {
-  position: absolute;
-  left: 12px;
-  bottom: 12px;
-  color: #fff;
-  font-family: 'Pacifico', 'Brush Script MT', cursive;
-  font-size: 20px;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    bottom: 12px;
+    color: #fff;
+    font-family: 'Just Another Hand', cursive;
+    font-size: 25px;
+    text-shadow: 0 2px 6px rgba(0,0,0,0.6);
 }
 
 /* small view all circle (to place at the end of the row) */
@@ -57,4 +60,46 @@
   font-size: 14px;
   bottom: 8px;
   left: 8px;
+}
+
+
+
+
+.dcontainer {
+    width: 95%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 40px;
+    margin-bottom: 30px;
+}
+
+.dviewall {
+    width: 83px;
+    height: 94px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .dvaplus {
+        font-size: 36px;
+        color: white;
+        font-weight: bold;
+        line-height: 36px;
+        text-align: center;
+        padding: 2px 10px;
+
+        background-color: #1e1e1e;
+        border-radius: 50%;
+    }
+
+    .dvat {
+        margin-top: 8px;
+        font-size: 14px;
+        color: white;
+        font-weight: 500;
+        text-align: center;
+    }
 }
