--- a/src/components/common/Artist.css
+++ b/src/components/common/Artist.css
@@ -41,6 +41,11 @@
   height: 100%;
   object-fit: cover;
   display: block;
+  transition: transform 0.35s ease;
+}
+
+.artist-avatar:hover img {
+  transform: scale(1.06);
 }
 
 .artist-name {
