--- a/src/components/common/CardGrid.css
+++ b/src/components/common/CardGrid.css
@@ -1,6 +1,7 @@
 .card-grid {
   padding: 15px 20px;
   /* background-color: #1a1a2e; */
+  margin-left: 20px;
   color: white;
 }
 
@@ -12,8 +13,9 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 20px;
+  align-items: center;
 }
 
 .card {
@@ -67,5 +69,33 @@
   color: #ccc;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellpisis;
+  text-overflow: ellipsis;
+}
+.cviewall {
+    width: 83px;
+    height: 94px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .cvaplus {
+        font-size: 36px;
+        color: white;
+        font-weight: bold;
+        line-height: 36px;
+        text-align: center;
+        padding: 2px 10px;
+
+        background-color: #1e1e1e;
+        border-radius: 50%;
+    }
+
+    .cvat {
+        margin-top: 8px;
+        font-size: 14px;
+        color: white;
+        font-weight: 500;
+        text-align: center;
+    }
 }
