--- a/src/pages/SongPlayer.css
+++ b/src/pages/SongPlayer.css
@@ -1,4 +1,4 @@
-.action-btn {
+/* .action-btn {
   background-color: #3a3a4a;
   color: white;
   border: none;
@@ -10,4 +10,4 @@
 
 .action-btn:hover {
   background-color: #505060;
-}
+} */
