--- a/src/components/common/Artist.css
+++ b/src/components/common/Artist.css
@@ -3,14 +3,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 18px;
   overflow-x: auto;
-  padding: 12px 8px;
-  scrollbar-width: none; /* Firefox */
-  margin-left: 10px;
+  padding: 12px 0; /* 👈 bỏ padding ngang */
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
+
 
 .artist-row::-webkit-scrollbar {
   display: none; /* Chrome/Safari/Edge */
@@ -66,7 +68,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 40px;
+    /* margin-left: 40px; */
     margin-bottom: 30px;
 }
 
