--- a/src/style/Layout.css
+++ b/src/style/Layout.css
@@ -45,7 +45,7 @@
   
   .content {
     flex: 1;
-    padding: 30px;
+    padding: 10px;
     color: white;
     min-height: 100vh;
     display: flex;
@@ -372,25 +372,25 @@ align-items: center;
 
 .footer-content {
   margin-top: 1%;
-  padding: 40px 40px;
+  padding: 20px 20px;
   width: 100%;
   color: white;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 30px;
 }
 
 .footer-grid {
-  padding-top: 20%;
+  padding-top: 30px;
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
-  gap: 40px;
+  gap: 20px;
   align-items: start;
 }
 
 .footer-about-heading {
   padding-top: 0%;
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 900;
   font-family: 'Vazirmatn', sans-serif;
   color: white;
@@ -401,7 +401,7 @@ align-items: center;
 
 .footer-about p {
   width: 100%;
-  height: 100px;
+  height: 50px;
   opacity: 0.90;
   text-align: justify;
   color: white;
@@ -426,35 +426,35 @@ align-items: center;
   width: 100%;
   text-Align: center;
   color: white;
-  font-Size: 36px;
+  font-Size: 18px;
   font-Weight: 700;
   word-Wrap: break-word;
 }
 
 .footer-links {
   display: flex;
-  justify-content: space-between;
-  gap: 10px;
+  justify-content: space-around;
+  gap: 5px;
 }
 
 .line {
   width: 100%;
-  height: 4px;
+  height: 2px;
   background-color: #f3eff2;
-  margin: 15px 0;
+  margin: 8px 0;
   font-size: 14px;
  }
 
 
 .footer-links ul {
   list-style: none;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: bold;
 }
 
 .footer-links li {
   text-Align: center;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .footer-links a {
@@ -472,23 +472,23 @@ align-items: center;
 }
 
 .Logo {
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 700;
   background: linear-gradient(to right, #EE10B0, #0E9EEF);
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin: 10px;
+  margin: 5px;
   justify-content: center;
 }
 
 .link {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .link img {
-  width: 28px;
+  width: 14px;
   cursor: pointer;
 }
 
@@ -506,7 +506,7 @@ align-items: center;
 }
 
 .TopBar {
-  margin: 2%;
+  margin: 10px;
   display: flex;
   justify-content: space-between;
   /* row-gap: 5px; */
