--- a/src/components/common/Slider.css
+++ b/src/components/common/Slider.css
@@ -59,8 +59,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 2;
+  padding-top: 3px;
+
 }
 
 .nav.left {
@@ -112,7 +114,7 @@
   border: none;
   border-radius: 10px;
   background-color: #ee10b0;
-    color: white;
+  color: white;
   cursor: pointer;
 }
 
@@ -139,7 +141,6 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
   z-index: 0;
 }
-
