--- a/src/components/layout/MusicPlayer.css
+++ b/src/components/layout/MusicPlayer.css
@@ -4,7 +4,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: #1a1a1a;
+  height: 100px;
+  background: linear-gradient(to right, #0E1920, #0b1319 70%);
   color: white;
   padding: 12px 24px;
   display: flex;
@@ -12,14 +13,19 @@
   justify-content: space-between;
   z-index: 9999;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
-  font-family: sans-serif;
 }
-
+.player-left, 
+.player-center,
+.player-right {
+  display:flex;
+  align-items: center;
+  gap: 12px;
+}
 /* Left Section: Album Art + Song Info */
 .player-left {
   display: flex;
   align-items: center;
-  gap: 12px;
+  min-width: 200px;
 }
 
 .player-left img {
@@ -37,7 +43,7 @@
 .song-info p {
   margin: 0;
   font-size: 12px;
-  color: #aaa;
+  color: #eeebeb;
 }
 
 /* Center Section: Controls + Progress Bar */
@@ -52,15 +58,26 @@
 .controls {
   display: flex;
   gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 
 .controls button {
-  background: none;
+  background: transparent;
   border: none;
-  color: white;
-  font-size: 18px;
   cursor: pointer;
+  color: #f3f3f3;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+
+.controls button:hover {
+  transform: scale(1.1);
+    filter: drop-shadow(0 0 1pxrgba(238, 16, 176, 1));
+     color:rgba(238, 16, 176, 1); /* hồng neon */
+}
+
+
+
 
 /* Progress Bar */
 .progress-bar {
@@ -68,18 +85,24 @@
   align-items: center;
   gap: 8px;
   width: 100%;
-  padding: 0 30px 0 30px;;
+  padding: 0 30px 0 30px;
+  margin-top: 4px;
 }
 
 .progress-bar input[type="range"] {
   flex-grow: 1;
   height: 4px;
-  background: #444;
   border-radius: 4px;
   appearance: none;
   outline: none;
   min-width: 200px;
+  background: linear-gradient(to right, rgba(238, 16, 176, 1), rgba(14, 158, 239, 0.92));
+  background-size: 0% 100%;
+  background-repeat: no-repeat;
+  background-color: white;
+  transition: background-size 0.2s ease;
 }
+
 
 .progress-bar span {
   font-size: 12px;
