--- a/src/components/common/Artist.css
+++ b/src/components/common/Artist.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 18px;
   overflow-x: auto;
@@ -68,7 +68,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* margin-left: 40px; */
+    margin-left: 40px;
     margin-bottom: 30px;
 }
 
