--- a/src/components/common/CardGrid.css
+++ b/src/components/common/CardGrid.css
@@ -1,7 +1,7 @@
 .card-grid {
   padding: 15px 20px;
   /* background-color: #1a1a2e; */
-  margin-left: 0px;
+  margin-left: 10px;
   color: white;
 }
 
@@ -16,6 +16,7 @@
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 20px;
   align-items: center;
+  justify-content: space-between;
 }
 
 .card {
