--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --primary-bg: rgba(65, 44, 58, 1);
   --text-color: #f0f0f0;
   --light-text-color: #b0b0b0;
-  --accent-color: solid #FF26C2;
+  --accent-color: #667eea;
 }
 
 @import "tailwindcss";
