--- a/src/components/common/FilteredSongsTable2.css
+++ b/src/components/common/FilteredSongsTable2.css
@@ -17,7 +17,7 @@
 }
 
 .album-header {
-    background: linear-gradient(90deg, #1171E2 0%, rgba(127, 184, 211, 0.02) 50%, rgba(63, 79, 86, 0) 100%);
+    background: linear-gradient(90deg, #667eea 0%, rgba(102, 126, 234, 0.1) 50%, rgba(240, 147, 251, 0.05) 100%);
     border-radius: 10px;
     height: 450px;
     box-shadow: 0px 9px 6px 1px rgba(0, 0, 0, 0.36);
